# stualert

./: .dockerignore  .drone.yml  .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.client.json  tsconfig.server.json  vite.config.ts
.github/workflows/: deploy.yaml
scripts/: copy-client.mjs
src/: config.ts  main.ts  server.ts
src/services/activity/: activity.service.ts  emitter.ts  handler.ts  state.ts
src/services/gpio/: gpio.service.ts  manager.ts
src/services/husqvarna/: api.service.ts  websocket.service.ts  websocket.ts
src/shared/: api.type.ts  gpio.type.ts  mower.type.ts  ws.type.ts
src/stualert/: main.py
src/stualert/mower/: auth.py
tools/husqvarna-ws-mock/: Dockerfile  events.js  package-lock.json  package.json  server.js
tools/husqvarna-ws-mock/src/: events.js  server.js
web/: index.html
web/src/: app.tsx  index.tsx
web/src/components/: flash.tsx  mower-icon.tsx
web/src/hooks/: useActivity.ts
